# sam-opt-research

./: .gitignore  README.md  main.py  pyproject.toml
.agents/: AGENTS.md  PLAN.md
CS_229_Project_Milestone/: cs229-milestone.aux  cs229-milestone.bbl  cs229-milestone.blg  cs229-milestone.fdb_latexmk  cs229-milestone.fls  cs229-milestone.out  cs229-milestone.tex  reference.bib
configs/: resnet18_baseline.yaml  resnet18_baseline_run.yaml  resnet18_baseline_run_flatness.yaml  resnet18_reparam.yaml  resnet18_reparam_run.yaml  vit_baseline.yaml  vit_baseline_run.yaml  vit_baseline_run_flatness.yaml  vit_reparam.yaml  vit_reparam_run.yaml  vit_reparam_run_flatness.yaml
docs/: Stanford_Poster_Template.pptx  bugs.md  experiments.md  notes.md
docs/CS229__Project_Final_Report_Template/: references.bib  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex
docs/CS_229_Project_Milestone/: cs229-milestone.fdb_latexmk  cs229-milestone.fls  cs229-milestone.out  cs229-milestone.tex
experiments/: migrate_results.py  plot_baseline.py  plot_convergence.py  plot_flatness.py  plot_landscape.py  plot_loss_curves.py  plot_reparam.py  recover_baseline.py  run_baseline.py  run_flatness.py  run_gpu1.sh  run_gpu2.sh  run_reparam.py  run_resnet18_baseline.sh  run_resnet18_reparam.sh  run_smoke.py  run_smoke_test.py  run_vit_baseline.sh  run_vit_reparam.sh  utils.py
experiments/notebooks/: analyse.ipynb  analyse_dataset.ipynb  analyse_loss_landscape.ipynb  interpret_attn_heads.ipynb  metrics_analysis.ipynb
results/: index.json
results/experiments/baseline/resnet18/: baseline_results.json
results/experiments/flatness/resnet18/: landscape_all.json
results/results/baseline/resnet18/: baseline_results.json
results/results/flatness/resnet18/: landscape_all.json  sharpness_all.json
results_reparam/results/reparam/resnet18/: reparam_results.json
src/analysis/: hutchinson.py  landscape.py  metrics.py  reparam.py
src/data/: cifar10.py
src/models/: resnet18.py  vit.py
src/optimizers/: __init__.py  asam.py  msam.py  sam.py
src/training/: trainer.py
tests/: test_metrics_tracking.py  test_reparam_resnet.py  test_reparam_vit.py  test_resume.py
