[project]
name = "sam-opt-research"
version = "0.1.0"
description = "Benchmarking SAM, ASAM, and M-SAM optimizer variants"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "datasets>=2.18.0",
    "vastai>=1.0.12",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "fvcore>=0.1.5.post20221221",
    # pytorch-triton is the nightly index's name for triton; it installs itself
    # as 'triton' at runtime. Listed explicitly so uv can resolve it from the
    # nightly index instead of chasing torch's git-hash triton pin.
    "pytorch-triton; sys_platform == 'linux'",
]

[tool.uv]
# torch nightly pins triton to a git-hash version that doesn't exist on PyPI.
# We satisfy the triton requirement via pytorch-triton (same package, different
# PyPI name) sourced from the nightly index, so suppress the transitive constraint.
override-dependencies = [
    "triton; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128-nightly", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128-nightly", marker = "sys_platform == 'linux'" },
]
pytorch-triton = [
    { index = "pytorch-cu128-nightly", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (large model download/inference, deselect with -m 'not slow')"]
